--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@types/mongoose": "^5.11.97",
     "axios": "^1.8.2",
-    "better-auth": "^1.2.3",
+    "better-auth": "^1.3.4",
     "hono": "^4.7.4",
-    "mongodb": "^6.14.2",
-    "mongoose": "^8.12.1"
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "@types/bun": "latest"
@@ -31,11 +29,8 @@
     "bun",
     "hono",
     "better-auth",
-    "mongodb",
-    "mongoose",
     "typescript",
     "api",
-    "rest",
-    "template"
+    "rest"
   ]
 }
