Update Containerfile to define build arguments in the builder stage, modify middleware to use dynamic cookie names based on environment, and change branding from 'Better Auth' to 'Creators Cloud' across various components. Enhance login and registration forms with autocomplete attributes for better user experience. Update Kong configuration to prevent path stripping for API routes.

--- a/kong/kong.yaml
+++ b/kong/kong.yaml
@@ -8,6 +8,7 @@ services:
     routes:
       - name: api-route
         paths: ["/api", "/.well-known"]
+        strip_path: false
         
   - name: frontend
     host: frontend  
