temporarily disable building for client && Update dependencies in server package and configuration files, including better-auth to version 1.3.6, and adjust Docker workflow to comment out client build for improved clarity.

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         # Dimension 1: which component to build
         component: 
-          - client
+          # - client
           - server
         # Dimension 2: which architectures
         arch:
