Enhance login and registration forms with loading state management and error handling. Update Docker compose configuration to include FEDERATED_EMAIL_DOMAIN environment variable. Modify README for clarity on build commands and API URLs.

--- a/compose.yaml
+++ b/compose.yaml
@@ -10,6 +10,7 @@ services:
       - BETTER_AUTH_SECRET=your_secret_key
       - BETTER_AUTH_DATABASE_URL=postgresql://postgres:postgres@localhost:5432/better_auth
       - BETTER_AUTH_JWT_ISSUER=http://auth.project.com
+      - FEDERATED_EMAIL_DOMAIN=drive.project.com
     networks:
       - app-network
 
