--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
+    "next-runtime-env": "^3.3.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
