--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -56,5 +56,5 @@ jobs:
           tags: |
             ${{ steps.meta.outputs.tags }}-${{ matrix.arch }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=registry,ref=ghcr.io/${{ github.repository }}-${{ matrix.component }}:cache-${{ matrix.arch }}
+          cache-to: type=registry,ref=ghcr.io/${{ github.repository }}-${{ matrix.component }}:cache-${{ matrix.arch }},mode=max
